Working toward unobtrusive javascript on the logo form snippet: - Remove the "cancel" button, it's useless without js and   redundant with. (it's just used as a collapser.) - Remove the broken "#" href on the "Change image" link. - Fix CSS so "change image" still looks like a link.
git-svn-id: https://svn.socialplanning.org/svn/opencore/branches/pleiades-playground-20071113@11178 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/opencore/browser/css/opencore.css
+++ b/opencore/browser/css/opencore.css
@@ -1061,6 +1061,7 @@ height: 1em; */
 .oc-expanderLink {
   background: url("/++resource++img/expander-nub-closed.gif") 0 3px no-repeat;
   padding-left: 12px;
+  cursor: pointer;
 }
 .oc-expanderLink.oc-expanderLink-open {
   background: url("/++resource++img/expander-nub-open.gif") 0 3px no-repeat;
